--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "react": "^17.0.2",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^7.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "web3": "^1.6.1",
+    "web3-eth-contract": "^1.6.1"
   },
   "scripts": {
     "start": "craco start",
